[gd_scene load_steps=18 format=2]

[ext_resource path="res://plant_assets/aloe_f3.png" type="Texture" id=1]
[ext_resource path="res://Plant.gd" type="Script" id=2]
[ext_resource path="res://MenuButton.gd" type="Script" id=3]
[ext_resource path="res://SunlightMain.tscn" type="PackedScene" id=4]
[ext_resource path="res://plant_assets/aloe_f2.png" type="Texture" id=5]
[ext_resource path="res://plant_assets/aloe_f1.png" type="Texture" id=6]
[ext_resource path="res://livespace_assets/outdoor_background.png" type="Texture" id=7]
[ext_resource path="res://Bar.tscn" type="PackedScene" id=8]
[ext_resource path="res://Shop/Shop.tscn" type="PackedScene" id=9]
[ext_resource path="res://MainHUD.tscn" type="PackedScene" id=10]
[ext_resource path="res://plant_assets/alocasia_f3.png" type="Texture" id=11]
[ext_resource path="res://plant_assets/alocasia_f2.png" type="Texture" id=12]
[ext_resource path="res://plant_assets/alocasia_f1.png" type="Texture" id=13]
[ext_resource path="res://PruningMain.tscn" type="PackedScene" id=14]
[ext_resource path="res://wateringmain.tscn" type="PackedScene" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ) ],
"loop": true,
"name": "Aloe",
"speed": 7.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "Alocasia",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 53.37, 83.6068 )

[node name="Plant" type="Area2D"]
position = Vector2( -0.396851, 0 )
script = ExtResource( 2 )

[node name="background" type="TextureRect" parent="."]
margin_right = 480.0
margin_bottom = 720.0
mouse_filter = 2
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarProgress" type="Timer" parent="."]

[node name="Bar" parent="." instance=ExtResource( 8 )]
margin_left = 65.5159
margin_top = 268.363
margin_right = 417.516
margin_bottom = 308.363
mouse_filter = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 248.824, 506.645 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "Alocasia"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 251.606, 525.059 )
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="MenuButton" type="MenuButton" parent="."]
margin_left = 147.0
margin_top = 361.0
margin_right = 359.0
margin_bottom = 620.0
hint_tooltip = "click me!"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SunlightMain" parent="MenuButton" instance=ExtResource( 4 )]
visible = false
position = Vector2( -146.924, -360.709 )

[node name="WateringMain" parent="MenuButton" instance=ExtResource( 15 )]
visible = false
position = Vector2( -146, -360 )

[node name="PruningMain" parent="MenuButton" instance=ExtResource( 14 )]
visible = false
position = Vector2( -146.924, -360.709 )
z_index = 1

[node name="Shop" parent="." instance=ExtResource( 9 )]
visible = false

[node name="MainHUD" parent="." instance=ExtResource( 10 )]

[connection signal="timeout" from="BarProgress" to="." method="_on_BarProgress_timeout"]
[connection signal="collect" from="MenuButton" to="." method="collect"]
[connection signal="go" from="MenuButton" to="MenuButton/WateringMain" method="_on_MenuButton_go"]
[connection signal="hide" from="MenuButton/SunlightMain" to="MainHUD" method="_on_SunlightMain_hide"]
[connection signal="hide" from="MenuButton/WateringMain" to="MainHUD" method="_on_WateringMain_hide"]
[connection signal="hide" from="MenuButton/PruningMain" to="MainHUD" method="_on_PruningMain_hide"]
[connection signal="quick_bounce" from="MenuButton/PruningMain" to="MenuButton/PruningMain/PruningPlant" method="quick_bounce"]
[connection signal="snip" from="MenuButton/PruningMain" to="MenuButton/PruningMain/PruningShears" method="snip"]
[connection signal="hide" from="Shop" to="MainHUD" method="_on_Shop_hide"]
[connection signal="purchase" from="Shop" to="." method="_on_Shop_purchase"]
[connection signal="update_bg" from="Shop" to="." method="_on_Shop_update_bg"]
[connection signal="update_plant" from="Shop" to="." method="_on_Shop_update_plant"]
